# dashowboard

./: AGENTS.md  README.md  package.json  pnpm-lock.yaml
src/: index.css  main.tsx
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/backend/sql/: database.ts  migrations.ts
src/components/AppLayout/: AppLayout.tsx
src/components/IntegrationCard/: IntegrationCard.tsx
src/components/MetricCard/: MetricCard.tsx
src/components/Modal/: Modal.tsx  Modal.types.ts  index.ts
src/components/NovoProjeto/: NovoProjeto.types.ts  NovoProjeto.utils.ts  NovoProjetoConteudo.hook.ts  NovoProjetoConteudo.tsx
src/components/ProjectCard/: ProjectCard.tsx
src/components/ProjectHeader/: ProjectHeader.tsx  ProjectHeader.types.ts
src/components/ProjectHistory/: ProjectHistory.tsx
src/components/ProjectOverview/: ProjectOverview.tsx
src/components/ProjectRepositories/: ProjectRepositories.tsx
src/components/ProjectServices/: ProjectServices.tsx
src/components/TemplateEstado/: TemplateEstado.tsx  TemplateEstado.types.ts  index.ts
src/components/TopBar/: TopBar.tsx
src/lib/config/: desktop.ts  monitoring.ts  preferencias.ts  query-client.ts
src/lib/hooks/: useControlModal.ts  usePreferenciasGlobais.ts
src/lib/types/: modal.ts
src/lib/utils/: error.ts
src/pages/Configuracoes/: Configuracoes.hook.ts  Configuracoes.tsx  Configuracoes.types.ts  Configuracoes.utils.ts
src/pages/DetalhesProjeto/: DetalhesProjeto.hook.ts  DetalhesProjeto.tsx
src/pages/Home/: Home.hook.ts  Home.tsx  Home.types.ts
src/pages/Incidentes/: Incidentes.tsx  (+1 more)
src/routes/: routes.tsx
(+46 files in other folders)
